fix: add favicon and profile photo; un-ignore public/ in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -82,7 +82,7 @@ dist
 
 # Gatsby files
 .cache/
-public
+# public  ← removed: Vite uses public/ for static assets
 
 # Storybook build outputs
 .out
